welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:31: error: not found: value faireV
    faireV();
    ^