welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def faireL(){
  baisseBrosse();
  leveBrosse();
  recule();
  gauche();
  avance();
  
  baisseBrosse();
  leveBrosse();
  
  droite();
  avance();
  avance();
  avance();
  gauche();
}

def faireMotif()
{
  
  for(compt <- 1 to 4)
  {
    
    compt match {
      case 1 =>  setCouleurBrosse(Color.red);
      case 2 =>  setCouleurBrosse(Color.blue);
      case 3 =>  setCouleurBrosse(Color.green);
      case 4 =>  setCouleurBrosse(Color.yellow);
    }
    avance();
    faireV();
  }
}
override def run() {
  for(i <- 1 to 4)
  {
    for(j <-1 to 4)
    {
      faireMotif();
      avance();
      avance();
      avance();
    }
    gauche();
    avance();
    avance();
    avance();
    droite();
  }
}